ersetze als deprecated markierten Konstruktor von Boolean(boolean)