@@ -81,7 +81,7 @@ public class PinTanConfigImpl implements PinTanConfig
     if ("bezeichnung".equals(attribute))
       return getBezeichnung();
     if ("showtan".equals(attribute))
-      return new Boolean(getShowTan());
+      return Boolean.valueOf(getShowTan());
     if ("tanmedia".equals(attribute))
       return getTanMedia();
     if ("tanmedias".equals(attribute))
